--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -10,10 +10,10 @@
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
+      <li *ngIf="appUser" class="nav-item">
         <a class="nav-link" routerLink="/my-books">Livres</a>
       </li>
-      <li class="nav-item">
+      <li *ngIf="appUser" class="nav-item">
         <a class="nav-link" routerLink="/my-movies">Films</a>
       </li>
       <ng-template #anonymousUser>
@@ -21,12 +21,15 @@
           <a class="nav-link" routerLink="/login">Login</a>
         </li>
       </ng-template>
-      <li ngbDropdown *ngIf="auth.user$ | async as user; else anonymousUser" class="nav-item dropdown">
+      <li ngbDropdown *ngIf="appUser; else anonymousUser" class="nav-item dropdown">
         <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          {{ user.displayName }}</a>
+          {{ appUser.name }}</a>
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
           <a class="dropdown-item" href="#">Action</a>
           <a class="dropdown-item" href="#">Another action</a>
+          <ng-container *ngIf="appUser.isAdmin">
+            <a class="dropdown-item" href="#">Admin</a>
+          </ng-container>
           <a class="dropdown-item" (click)="logout()">Log Out</a>
         </div>
       </li>
