--- a/src/app/books/books-form/books-form.component.html
+++ b/src/app/books/books-form/books-form.component.html
@@ -1,23 +1,47 @@
-<form>
-  <div class="form-group">
-    <label for="title">Titre</label>
-    <input id="title" type="text" class="form-control">
-  </div>
-  <div class="form-group">
-      <label for="writer">Auteur</label>
-      <input id="writer" type="text" class="form-control">
-    </div>    
-    <div class="form-group">
+<div class="row">
+  <div class="col-md-6">
+    <form #f="ngForm" (ngSubmit)="save(f.value)">
+      <div class="form-group">
+        <label for="title">Titre</label>
+        <input #title="ngModel" ngModel name="title" id="title" type="text" class="form-control" required>
+        <div class="alert alert-danger" *ngIf="title.touched && title.invalid">Titre manquant.</div>
+      </div>
+      <div class="form-group">
+        <label for="writer">Auteur</label>
+        <input #writer="ngModel" ngModel name="writer" id="writer" type="text" class="form-control" required>
+        <div class="alert alert-danger" *ngIf="writer.touched && writer.invalid">Auteur manquant.</div>
+      </div>
+      <div class="form-group">
         <label for="date">Date</label>
-        <input id="date" type="date" class="form-control">
-      </div>    
+        <input #date="ngModel" ngModel name="date" id="date" type="date" class="form-control" required>
+        <div class="alert alert-danger" *ngIf="date.touched && date.invalid">Date manquante.</div>
+      </div>
       <div class="form-group">
-          <label for="rating">Note</label>
-          <input id="rating" type="text" class="form-control">
-      </div>    
+        <label for="rating">Note</label>
+        <input #rating="ngModel" ngModel name="rating" id="rating" type="number" class="form-control" required [range]="[1, 10]">
+        <div class="alert alert-danger" *ngIf="rating.touched && rating.invalid">
+          <div *ngIf="rating.errors.required">Note manquante.</div>
+          <div *ngIf="rating.errors.range">La note doit être comprise entre 1 et 10.</div>
+        </div>
+      </div>
       <div class="form-group">
-          <label for="imageUrl">Url</label>
-          <input id="imageUrl" type="text" class="form-control">
-        </div>              
-        <button class="btn btn-primary">Enregistrer</button>
-  </form>
+        <label for="imageUrl">Url</label>
+        <input #imageUrl="ngModel" ngModel name="imageUrl" id="imageUrl" type="url" class="form-control" required url>
+        <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">
+          <div *ngIf="imageUrl.errors.required">URL manquante.</div>
+          <div *ngIf="imageUrl.errors.url">L'URL n'est pas valide.</div>
+        </div>
+      </div>
+      <button class="btn btn-primary">Enregistrer</button>
+    </form>
+  </div>
+  <div class="col-md-6">
+    <div class="card" style="width: 20rem;">
+      <img class="card-img-top" [src]="imageUrl.value">
+      <div class="card-body">
+        <h4 class="card-title">{{title.value}}</h4>
+        <p class="card-text">{{writer.value}}</p>
+      </div>
+    </div>
+  </div>
+</div>
