--- a/src/app/books/books-form/books-form.component.html
+++ b/src/app/books/books-form/books-form.component.html
@@ -3,22 +3,22 @@
     <form #f="ngForm" (ngSubmit)="save(f.value)">
       <div class="form-group">
         <label for="title">Titre</label>
-        <input #title="ngModel" ngModel name="title" id="title" type="text" class="form-control" required>
+        <input #title="ngModel" [(ngModel)]="book.title" name="title" id="title" type="text" class="form-control" required>
         <div class="alert alert-danger" *ngIf="title.touched && title.invalid">Titre manquant.</div>
       </div>
       <div class="form-group">
         <label for="writer">Auteur</label>
-        <input #writer="ngModel" ngModel name="writer" id="writer" type="text" class="form-control" required>
+        <input #writer="ngModel" [(ngModel)]="book.writer" name="writer" id="writer" type="text" class="form-control" required>
         <div class="alert alert-danger" *ngIf="writer.touched && writer.invalid">Auteur manquant.</div>
       </div>
       <div class="form-group">
         <label for="date">Date</label>
-        <input #date="ngModel" ngModel name="date" id="date" type="date" class="form-control" required>
+        <input #date="ngModel" [(ngModel)]="book.date" name="date" id="date" type="date" class="form-control" required>
         <div class="alert alert-danger" *ngIf="date.touched && date.invalid">Date manquante.</div>
       </div>
       <div class="form-group">
         <label for="rating">Note</label>
-        <input #rating="ngModel" ngModel name="rating" id="rating" type="number" class="form-control" required [range]="[1, 10]">
+        <input #rating="ngModel" [(ngModel)]="book.rating" name="rating" id="rating" type="number" class="form-control" required [range]="[1, 10]">
         <div class="alert alert-danger" *ngIf="rating.touched && rating.invalid">
           <div *ngIf="rating.errors.required">Note manquante.</div>
           <div *ngIf="rating.errors.range">La note doit être comprise entre 1 et 10.</div>
@@ -26,7 +26,7 @@
       </div>
       <div class="form-group">
         <label for="imageUrl">Url</label>
-        <input #imageUrl="ngModel" ngModel name="imageUrl" id="imageUrl" type="url" class="form-control" required url>
+        <input #imageUrl="ngModel" [(ngModel)]="book.imageUrl" name="imageUrl" id="imageUrl" type="url" class="form-control" required url>
         <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">
           <div *ngIf="imageUrl.errors.required">URL manquante.</div>
           <div *ngIf="imageUrl.errors.url">L'URL n'est pas valide.</div>
@@ -37,10 +37,10 @@
   </div>
   <div class="col-md-6">
     <div class="card" style="width: 20rem;">
-      <img class="card-img-top" [src]="imageUrl.value">
+      <img class="card-img-top" [src]="book.imageUrl" *ngIf="book.imageUrl">
       <div class="card-body">
-        <h4 class="card-title">{{title.value}}</h4>
-        <p class="card-text">{{writer.value}}</p>
+        <h4 class="card-title">{{book.title}}</h4>
+        <p class="card-text">{{book.writer}}</p>
       </div>
     </div>
   </div>
