--- a/src/app/my-books/my-books.component.html
+++ b/src/app/my-books/my-books.component.html
@@ -15,7 +15,7 @@
             <td>{{b.title}}</td>
             <td>{{b.writer}}</td>
             <td>{{b.rating}}</td>
-            <td><a [routerLink]="['/book/',b.$key]"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i></a></td>
+            <td><a [routerLink]="['/books/',b.$key]"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i></a></td>
         </tr>
     </tbody>
 </table>
