--- a/src/app/books/books-form/books-form.component.html
+++ b/src/app/books/books-form/books-form.component.html
@@ -33,6 +33,7 @@
         </div>
       </div>
       <button class="btn btn-primary">Enregistrer</button>
+      <button type="button" (click)="delete()" class="btn btn-danger">Supprimer</button>
     </form>
   </div>
   <div class="col-md-6">
