--- a/src/app/books/books-form/books-form.component.html
+++ b/src/app/books/books-form/books-form.component.html
@@ -37,7 +37,7 @@
     </form>
   </div>
   <div class="col-md-6">
-    <div class="card" style="width: 20rem;">
+    <div *ngIf="book.title" class="card" style="width: 20rem;">
       <img class="card-img-top" [src]="book.imageUrl" *ngIf="book.imageUrl">
       <div class="card-body">
         <h4 class="card-title">{{book.title}}</h4>
