--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,17 +1,11 @@
 <div class="row">
   <div class="col-md-6">
-    <form #f="ngForm" (ngSubmit)="save(f.value)">
-      <div class="form-group">
-        <label for="displayName">Nom</label>
-        <input #displayName="ngModel" [(ngModel)]="user.displayName" name="displayName" id="displayName" type="text" class="form-control" readonly>
-        <div class="alert alert-danger" *ngIf="displayName.touched && displayName.invalid">Nom manquant.</div>
-      </div>
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input #email="ngModel" [(ngModel)]="user.email" name="email" id="email" type="text" class="form-control" readonly>
-        <div class="alert alert-danger" *ngIf="email.touched && email.invalid">Email manquant.</div>
-      </div>
-      <button class="btn btn-primary" disabled>Enregistrer</button>
-    </form>
+    <h1>Profil</h1>
+    <div *ngIf="appUser">
+      Nom : {{ appUser.name}} <br><br>
+      Email : {{ appUser.email}} <br><br>
+      Dernière connexion le : {{ appUser.lastConnection | date:'dd/MM/yyyy à HH:mm'}} <br><br>
+      
+  </div>      
   </div>
 </div>
