--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -34,7 +34,7 @@
           <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
             <!--<a class="dropdown-item" routerLink="/profile">Profil</a>-->
             <ng-container *ngIf="appUser.isAdmin">
-              <a class="dropdown-item" href="#">Admin</a>
+              <a class="dropdown-item" routerLink="/admin">Administration</a>
             </ng-container>
             <a class="dropdown-item" (click)="logout()">Log Out</a>
           </div>
