--- a/src/app/concert-form/concert-form.component.html
+++ b/src/app/concert-form/concert-form.component.html
@@ -2,13 +2,13 @@
   <div class="col-md-6">
     <form #f="ngForm" (ngSubmit)="save(f.value)">
       <div class="form-group">
-        <label for="artist">Artiste</label>
-        <input #artist="ngModel" [(ngModel)]="concert.artist" name="artist" id="artist" type="text" class="form-control" required>
-        <div class="alert alert-danger" *ngIf="artist.touched && artist.invalid">Artiste manquant.</div>
+        <label for="mainArtist">Artiste</label>
+        <input #mainArtist="ngModel" [(ngModel)]="concert.mainArtist" name="mainArtist" id="mainArtist" type="text" class="form-control" required>
+        <div class="alert alert-danger" *ngIf="mainArtist.touched && mainArtist.invalid">Artiste manquant.</div>
       </div>
       <div class="form-group">
-        <label for="with">Avec</label>
-        <input #with="ngModel" [(ngModel)]="concert.with" name="with" id="with" type="text" class="form-control" required>
+        <label for="otherArtist">Avec</label>
+        <input #otherArtist="ngModel" [(ngModel)]="concert.otherArtist" name="otherArtist" id="otherArtist" type="text" class="form-control" required>
       </div>
       <div class="form-group">
         <label for="venue">Salle</label>
@@ -17,7 +17,7 @@
       </div>      
       <div class="form-group">
         <label for="date">Date</label>
-        <input #date="ngModel" [(ngModel)]="concert.date" name="date" id="date" type="date" class="form-control" required>
+        <input #date="ngModel" [(ngModel)]="dateEntry" name="date" id="date" type="date" class="form-control" required>
         <div class="alert alert-danger" *ngIf="date.touched && date.invalid">Date manquante.</div>
       </div>
       <div class="form-group">
