--- a/src/app/books/books-form/books-form.component.html
+++ b/src/app/books/books-form/books-form.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="form-group">
         <label for="date">Date</label>
-        <input #date="ngModel" [(ngModel)]="book.date" name="date" id="date" type="date" class="form-control" required>
+        <input #date="ngModel" [(ngModel)]="dateEntry" name="date" id="date" type="date" class="form-control" required>
         <div class="alert alert-danger" *ngIf="date.touched && date.invalid">Date manquante.</div>
       </div>
       <div class="form-group">
