--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -16,11 +16,9 @@
         <li *ngIf="appUser" class="nav-item">
           <a class="nav-link" routerLink="/concerts">Concerts</a>
         </li>
-        <!--
         <li *ngIf="appUser" class="nav-item">
-          <a class="nav-link" routerLink="/my-movies">Films</a>
+          <a class="nav-link" routerLink="/movies">Films</a>
         </li>
-      -->
       </ul>
       <ul class="navbar-nav">
         <ng-template #anonymousUser>
