--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -55,5 +55,23 @@
     </div>
   </div>
 </div>
+<div class="card">
+  <h4 class="card-header">Séries</h4>
+  <div class="card-body">
+    <h4 class="card-title"></h4>
+    <p class="card-text">
+      <label class="custom-file">
+        <input type="file" (change)="changeListenerTvshow($event)" id="file_tvshow" class="custom-file-input"/>
+        <span class="custom-file-control"></span>
+      </label>
+      <br>      
+    </p>  
+      <div *ngIf="fileNameTvshow">Fichier : {{ fileNameTvshow }}
+      <button class="btn btn-primary" (click)="extractDataTvshow()">
+        Import des données
+      </button>
+    </div>
+  </div>
+</div>
 
 
