--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -19,6 +19,9 @@
         <li *ngIf="appUser" class="nav-item">
           <a class="nav-link" routerLink="/movies">Films</a>
         </li>
+        <li *ngIf="appUser" class="nav-item">
+          <a class="nav-link" routerLink="/tvshows">Séries</a>
+        </li>
       </ul>
       <ul class="navbar-nav">
         <ng-template #anonymousUser>
