--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -22,6 +22,9 @@
         <li *ngIf="appUser" class="nav-item">
           <a class="nav-link" routerLink="/tvshows">Séries</a>
         </li>
+        <li *ngIf="appUser" class="nav-item">
+          <a class="nav-link" routerLink="/comics">BDs</a>
+        </li>        
       </ul>
       <ul class="navbar-nav">
         <ng-template #anonymousUser>
