--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,34 @@
-<p>
-  home works!
-</p>
+<div class="row" *ngIf="userId">
+  <div class="col">
+    <h5>Les 5 derniers livres</h5>
+    <hr>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <div class="row" *ngIf="userId">
+      <ng-container *ngFor="let book of books; let i = index;">
+        <a [routerLink]="['/books/',book.$key]">
+          <img class="col col-2-4" [src]="book.imageUrl" alt="" title={{book.title}} style="max-width:150px;height:auto" />
+        </a>
+      </ng-container>
+    </div>
+  </div>
+</div>
+<div class="row" *ngIf="userId">
+    <div class="col">
+      <h5>Les 5 derniers films</h5>
+      <hr>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <div class="row" *ngIf="userId">
+        <ng-container *ngFor="let movie of movies; let i = index;">
+          <a [routerLink]="['/movies/',movie.$key]">
+            <img class="col col-2-4" [src]="movie.imageUrl" alt="" title={{movie.title}} style="max-width:150px;height:auto" />
+          </a>
+        </ng-container>
+      </div>
+    </div>
+  </div>
