--- a/src/app/books/book-summary/book-summary.component.html
+++ b/src/app/books/book-summary/book-summary.component.html
@@ -1,17 +1,46 @@
 <div class="row">
-  <div class="col">
-    <h5>Les 5 derniers livres</h5>
-    <hr>
-  </div>
-</div>
-<div class="row">
-  <div class="col">
-    <div class="row" *ngIf="userId">
-      <ng-container *ngFor="let book of books; let i = index;">
-        <a [routerLink]="['/books/',book.$key]">
-          <img class="col col-2-4" [src]="book.imageUrl" alt="" title={{book.title}} style="max-width:150px;height:auto" />
-        </a>
-      </ng-container>
+    <div class="card border-primary mb-3">
+      <div class="card-header">Les 5 derniers livres</div>
+      <div class="card-body">
+        <p class="card-text">
+          <ng-container *ngFor="let book of books; let i = index;">
+            <a [routerLink]="['/books/',book.$key]">
+              <img class="col col-2-4" [src]="book.imageUrl" alt="" title={{book.title}} style="max-width:130px;height:auto" />
+            </a>
+          </ng-container>
+        </p>
+      </div>
     </div>
   </div>
-</div>
+  <!--
+  <div class="col-sm-4">
+    <div class="card border-primary mb-3">
+      <div class="card-header">En 2017</div>
+      <div class="card-body">
+        <ul class="list-group">
+          <li class="list-group-item">28 livres lus, dernière lecture le 23/12/2017</li>
+          <li class="list-group-item">14 films vus</li>
+          <li class="list-group-item">25 concerts vus</li>
+        </ul>
+        <a href="#" class="btn btn-primary">Voir le détail</a>
+      </div>
+    </div>
+  </div>
+-->
+
+
+
+<!--
+  <div class="col-4">
+      <div style="display: block">
+        <canvas baseChart
+                [datasets]="barChartData"
+                [labels]="barChartLabels"
+                [options]="barChartOptions"
+                [legend]="barChartLegend"
+                [chartType]="barChartType"
+                (chartHover)="chartHovered($event)"
+                (chartClick)="chartClicked($event)"></canvas>
+      </div>
+  </div>
+-->
