--- a/src/app/movies/movie-summary/movie-summary.component.html
+++ b/src/app/movies/movie-summary/movie-summary.component.html
@@ -1,17 +1,14 @@
 <div class="row">
-  <div class="col">
-    <h5>Les 5 derniers films</h5>
-    <hr>
-  </div>
-</div>
-<div class="row">
-  <div class="col">
-    <div class="row" *ngIf="userId">
-      <ng-container *ngFor="let movie of movies; let i = index;">
-        <a [routerLink]="['/movies/',movie.$key]">
-          <img class="col col-2-4" [src]="movie.imageUrl" alt="" title={{movie.title}} style="max-width:150px;height:auto" />
-        </a>
-      </ng-container>
+  <div class="card border-primary mb-3">
+    <div class="card-header">Les 5 derniers films</div>
+    <div class="card-body">
+      <p class="card-text">
+        <ng-container *ngFor="let movie of movies; let i = index;">
+          <a [routerLink]="['/movies/',movie.$key]">
+            <img class="col col-2-4" [src]="movie.imageUrl" alt="" title={{movie.title}} style="max-width:130px;height:auto" />
+          </a>
+        </ng-container>
+      </p>
     </div>
   </div>
 </div>
