--- a/src/app/books/book-summary/book-summary.component.html
+++ b/src/app/books/book-summary/book-summary.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf="books.length>0">
     <div class="card border-primary mb-3">
       <div class="card-header">Les 5 derniers livres</div>
       <div class="card-body">
