--- a/src/app/comics/comic-summary/comic-summary.component.html
+++ b/src/app/comics/comic-summary/comic-summary.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf="comics.length>0">
   <div class="card border-primary mb-3">
     <div class="card-header">Les 5 dernières BDs</div>
     <div class="card-body">
