--- a/src/app/movie-form/movie-form.component.html
+++ b/src/app/movie-form/movie-form.component.html
@@ -11,9 +11,9 @@
         <input #director="ngModel" [(ngModel)]="movie.director" name="director" id="director" type="text" class="form-control" required>
         <div class="alert alert-danger" *ngIf="director.touched && director.invalid">Auteur manquant.</div>
       </div>
-      <div class="form-group">
-        <label for="date">Cinéma</label>
-        <input #cinema="ngModel" [(ngModel)]="movie.cinema" name="cinema" id="cinema" type="boolean" class="form-control" required>
+      <div class="form-check">
+          <input #cinema="ngModel" [(ngModel)]="movie.cinema" name="cinema" id="cinema" type="checkbox" required>
+          <label class="form-check-label" for="cinema">Vu au cinéma</label>
       </div>
       <div class="form-group">
         <label for="date">Date</label>
