--- a/src/app/books/book-summary/book-summary.component.html
+++ b/src/app/books/book-summary/book-summary.component.html
@@ -1,5 +1,5 @@
 <div class="row" *ngIf="books.length>0">
-    <div class="card border-primary mb-3">
+    <div class="card mb-3">
       <div class="card-header">Les 5 derniers livres</div>
       <div class="card-body">
         <p class="card-text">
@@ -12,35 +12,4 @@
       </div>
     </div>
   </div>
-  <!--
-  <div class="col-sm-4">
-    <div class="card border-primary mb-3">
-      <div class="card-header">En 2017</div>
-      <div class="card-body">
-        <ul class="list-group">
-          <li class="list-group-item">28 livres lus, dernière lecture le 23/12/2017</li>
-          <li class="list-group-item">14 films vus</li>
-          <li class="list-group-item">25 concerts vus</li>
-        </ul>
-        <a href="#" class="btn btn-primary">Voir le détail</a>
-      </div>
-    </div>
-  </div>
--->
-
-
-
-<!--
-  <div class="col-4">
-      <div style="display: block">
-        <canvas baseChart
-                [datasets]="barChartData"
-                [labels]="barChartLabels"
-                [options]="barChartOptions"
-                [legend]="barChartLegend"
-                [chartType]="barChartType"
-                (chartHover)="chartHovered($event)"
-                (chartClick)="chartClicked($event)"></canvas>
-      </div>
-  </div>
--->
+  
