--- a/src/app/movies/movie-summary/movie-summary.component.html
+++ b/src/app/movies/movie-summary/movie-summary.component.html
@@ -1,5 +1,5 @@
 <div class="row" *ngIf="movies.length>0">
-  <div class="card border-primary mb-3">
+  <div class="card mb-3">
     <div class="card-header">Les 5 derniers films</div>
     <div class="card-body">
       <p class="card-text">
