--- a/src/app/comics/comic-summary/comic-summary.component.html
+++ b/src/app/comics/comic-summary/comic-summary.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="comics.length>0">
+<div class="row" *ngIf="comicActive()">
   <div class="card mb-3">
     <div class="card-header">Les 5 dernières BDs</div>
     <div class="card-body">
@@ -12,3 +12,4 @@
     </div>
   </div>
 </div>
+
