--- a/src/app/movies/movie-summary/movie-summary.component.html
+++ b/src/app/movies/movie-summary/movie-summary.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="movies.length>0">
+<div class="row" *ngIf="movieActive()">
   <div class="card mb-3">
     <div class="card-header">Les 5 derniers films</div>
     <div class="card-body">
