--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,7 @@
     <book-summary></book-summary>
     <movie-summary></movie-summary>
     <comic-summary></comic-summary>
+    <tvshow-summary></tvshow-summary>
 </div>
 <div class="col-sm-4" *ngIf="userId">
     <summary-stat></summary-stat>
