--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,6 +4,7 @@
     <movie-summary></movie-summary>
     <comic-summary></comic-summary>
     <tvshow-summary></tvshow-summary>
+    <concert-summary></concert-summary>
 </div>
 <div class="col-sm-4" *ngIf="userId">
     <summary-stat></summary-stat>
