--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,3 +79,11 @@ body {
   .card-header {
     background-color: $palette-color3;
   }
+
+  .fa-comment-o {
+    color: #417d95;
+  }
+
+  .fa-pencil-square-o{
+    color: #417d95;
+  }
