--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -29,7 +29,7 @@
       <ul class="navbar-nav">
         <ng-template #anonymousUser>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/login">Login</a>
+            <a class="nav-link" routerLink="/login">Connexion</a>
           </li>
         </ng-template>
         <li ngbDropdown *ngIf="appUser; else anonymousUser" class="nav-item dropdown">
@@ -40,7 +40,7 @@
             <ng-container *ngIf="appUser.isAdmin">
               <a class="dropdown-item" routerLink="/admin">Administration</a>
             </ng-container>
-            <a class="dropdown-item" (click)="logout()">Log Out</a>
+            <a class="dropdown-item" (click)="logout()">Déconnexion</a>
           </div>
         </li>
       </ul>
