--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,5 @@
-<button 
-  (click)="login()"
-  class="btn btn-primary">Login with Google</button>
+<div class="col-md-3" style="color:white">
+  <a (click)="login()" class="btn btn-block btn-social btn-google">
+    <span class="fa fa-google"></span> Se connecter avec Google
+  </a>
+</div>
