Movies rating stars

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,3 +87,12 @@ body {
   .fa-pencil-square-o{
     color: #417d95;
   }
+
+  .star {
+    font-size: 2rem;
+    color: $palette-color3;
+  }
+
+  .filled {
+    color: rgba(255, 187, 0, 0.884);
+  }
