--- a/src/app/movies/movie-form/movie-form.component.html
+++ b/src/app/movies/movie-form/movie-form.component.html
@@ -20,14 +20,22 @@
         <input #date="ngModel" [(ngModel)]="dateEntry" name="date" id="date" type="date" class="form-control" required>
         <div class="alert alert-danger" *ngIf="date.touched && date.invalid">Date manquante.</div>
       </div>
-      <div class="form-group">
-        <label for="rating">Note</label>
+      <div class="form-group row" >
+        <label class="col-sm-2 col-form-label" for="rating">Note</label>
+<!--
         <input #rating="ngModel" [(ngModel)]="movie.rating" name="rating" id="rating" type="number" class="form-control" required [range]="[1, 10]">
         <div class="alert alert-danger" *ngIf="rating.touched && rating.invalid">
           <div *ngIf="rating.errors.required">Note manquante.</div>
           <div *ngIf="rating.errors.range">La note doit être comprise entre 1 et 10.</div>
-        </div>
+        </div>      
+-->
+      <ngb-rating [(rate)]="currentRate">
+          <ng-template let-fill="fill" let-index="index">
+            <span class="star" [class.filled]="fill === 100">&#9733;</span>
+          </ng-template>
+        </ngb-rating>         
       </div>
+                            
       <div class="form-group">
         <label for="imageUrl">Lien vers l'affiche</label>
         <input #imageUrl="ngModel" [(ngModel)]="movie.imageUrl" name="imageUrl" id="imageUrl" type="url" class="form-control" required url>
