books : locale = fr

--- a/src/app/books/my-books/my-books.component.html
+++ b/src/app/books/my-books/my-books.component.html
@@ -15,13 +15,13 @@
 <data-table [items]="items" [itemCount]="itemCount" (reload)="reloadItems($event)">
     <data-table-column [property]="'title'" [header]="'Titre'" [sortable]="true" [resizable]="true"></data-table-column>
     <data-table-column [property]="'writer'" [header]="'Auteur'" [sortable]="true" [resizable]="true"></data-table-column>
-    <data-table-column [property]="'date'" [header]="'Date'" [sortable]="true" [resizable]="true">
+    <data-table-column [property]="'date'" [header]="'Date'" [sortable]="true" [resizable]="true" width="150px">
         <ng-template #dataTableCell let-item="item">
-            {{item.date | date:'MMMM yyyy':'':'fr'}}
+            {{item.date | date:'MMMM yyyy':'':'FR'}}
         </ng-template>
     </data-table-column>
-    <data-table-column [property]="'rating'" [header]="'Note'" [sortable]="true" [resizable]="true"></data-table-column>
-    <data-table-column [property]="'$key'">
+    <data-table-column [property]="'rating'" [header]="'Note'" [sortable]="true" [resizable]="true" width="80px"></data-table-column>
+    <data-table-column [property]="'$key'" width="80px">
     <ng-template #dataTableCell let-item="item">
         <a [routerLink]="['/books/',item.$key]">
             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
