--- a/src/app/movies/movie-form/movie-form.component.html
+++ b/src/app/movies/movie-form/movie-form.component.html
@@ -1,12 +1,23 @@
 <div class="row">
-  <div class="col-md-6">
-    <form #f="ngForm" (ngSubmit)="save(f.value)">
-      <div class="form-group">
+  <div class="col-md-6">        
+<!--      {{ modelMovieReference | json }} -->
+      <form #f="ngForm" (ngSubmit)="save(f.value)">
+      <div *ngIf="!movie.idMovieDb && movie.title" class="form-group">
         <label for="title">Titre</label>
         <input #title="ngModel" [(ngModel)]="movie.title" name="title" id="title" type="text" class="form-control" required>
         <div class="alert alert-danger" *ngIf="title.touched && title.invalid">Titre manquant.</div>
       </div>
-      <div class="form-group">
+    <div class="form-group">      
+        <ng-template #rt let-r="result" let-t="term">              
+            {{ r.title}} ({{r.release_date | date:'yyyy':'':'fr'}})
+          </ng-template>        
+          <label>Titre<div *ngIf="!movie.idMovieDb && movie.title">(Titre dans la base de référence)</div></label>
+            <input #titleRef="ngModel" (onfocusout)="onChangeTitle()" [ngModelOptions]="{standalone: true}" type="text" class="form-control" [class.is-invalid]="searchFailed" [(ngModel)]="modelMovieReference" [ngbTypeahead]="search" [resultTemplate]="rt" [inputFormatter]="formatter" required/>
+            <span *ngIf="searching">Recherche...</span>
+            <div class="invalid-feedback" *ngIf="searchFailed">Désolé, aucune suggestion ne peut être proposée.</div>
+            <div class="alert alert-danger" *ngIf="titleRef.touched && titleRef.invalid">Titre manquant.</div>
+      </div>
+    <div class="form-group">
         <label for="director">Réalisateur</label>
         <input #director="ngModel" [(ngModel)]="movie.director" name="director" id="director" type="text" class="form-control" required>
         <div class="alert alert-danger" *ngIf="director.touched && director.invalid">Auteur manquant.</div>
@@ -53,11 +64,11 @@
     </form>
   </div>
   <div class="col-md-6">
-    <div *ngIf="movie.title" class="card" style="width: 20rem;">
+    <div *ngIf="modelMovieReference" class="card" style="width: 20rem;">
       <img class="card-img-top" [src]="movie.imageUrl" *ngIf="movie.imageUrl">
       <div class="card-body">
-        <h4 class="card-title">{{movie.title}}</h4>
-        <p class="card-text">{{movie.director}}</p>
+        <h4 class="card-title">{{modelMovieReference.title}} - {{modelMovieReference.release_date | date:'yyyy':'':'fr'}} </h4>
+        <p class="card-text">{{modelMovieReference.overview}}</p>
       </div>
     </div>
   </div>
