--- a/src/app/concerts/concert-form/concert-form.component.html
+++ b/src/app/concerts/concert-form/concert-form.component.html
@@ -28,6 +28,10 @@
           <div *ngIf="rating.errors.range">La note doit être comprise entre 1 et 10.</div>
         </div>
       </div>
+      <div class="form-group">
+        <label for="comment">Commentaire</label>
+        <textarea class="form-control" #comment="ngModel" [(ngModel)]="concert.comment" name="comment" id="comment" rows="3"></textarea>
+      </div>            
       <button class="btn btn-primary">Enregistrer</button>
       <button type="button" (click)="delete()" class="btn btn-danger">Supprimer</button>
     </form>
