--- a/src/app/tvshows/tvshow/tvshows.component.html
+++ b/src/app/tvshows/tvshow/tvshows.component.html
@@ -13,7 +13,7 @@
       </ng-template>
   </data-table-column>
   <data-table-column [property]="'rating'" [header]="'Note'" [sortable]="true" [resizable]="true"></data-table-column>
-  <data-table-column [property]="'$key'">
+  <data-table-column [property]="'$key'" width="80px">
   <ng-template #dataTableCell let-item="item">
       <a [routerLink]="['/tvshows/',item.$key]">
           <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
