--- a/src/app/books/book-stat/book-stat.component.html
+++ b/src/app/books/book-stat/book-stat.component.html
@@ -3,7 +3,7 @@
     <div style="display: block">
       <h4>Mes livres par années</h4>
       <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [colors]="barChartColors" [options]="barChartOptions"
-        [legend]="barChartLegend" [chartType]="barChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
+        [legend]="barChartLegend" [chartType]="barChartType"></canvas>
     </div>
   </div>
   <div class="col-6">
